fix issues with tree view wrong color

--- a/OmniDB/OmniDB_app/static/OmniDB_app/scss/omnidb.scss
+++ b/OmniDB/OmniDB_app/static/OmniDB_app/scss/omnidb.scss
@@ -30,6 +30,11 @@ SOFTWARE.
   background-color: #f8f9fa;
 }
 
+a:not([href]):not([tabindex]){
+  color: inherit;
+  text-decoration: none;
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
